# classhopper

./: .gitignore  README.md  cabal.project  shell.nix  todo.md
bezier-core/: bezier-core.cabal  shell.nix
bezier-core/src/Curve/: BersteinBFs.hs
bezier-core/src/Geometry/: Bernstein.hs  COS.hs  Curve.hs  Helper.hs  Point.hs  Surface.hs
bezier-core/src/Geometry/BSpline/: Curve.hs  Surface.hs
bezier-render/: NOTES.md  bezier-render.cabal
bezier-render/app/: Main.hs
bezier-render/src/: Drawing.hs  Interface.hs  Render.hs  Scene.hs
file-translator/: README.md  file-translator.cabal
file-translator/sample/: 1srf_normal_trimmed.igs
file-translator/src/Geometry/File/: TranslatorApp.hs  TranslatorAppType.hs
file-translator/src/Geometry/File/IGES/: BuilderDirectory.hs  BuilderIgesRaw.hs  BuilderParameter.hs  BuilderSectionedIges.hs  ComposeEntity.hs  Helper.hs  ParameterParser.hs  RunIgesReader.hs  Type.hs  TypeEntity.hs
file-translator/src/Geometry/File/IGES/Composable/: Common.hs  ComposeCurveOrComposite.hs  CompositeCurve102.hs  CurveOnSurface142.hs  Primitive.hs  TrimmedSurface144.hs
file-translator/src/Geometry/File/IGES/ParameterParser/: Common.hs  CompositeCurve102.hs  Curve126.hs  CurveOnSurface142.hs  PointersEntity102.hs  PointersEntity142.hs  PointersEntity144.hs  Surface128.hs  TrimmedSurface144.hs
geometry-kernel/: README.md  geometry-kernel.cabal
geometry-kernel/src/Geometry/: BSpline.hs  Bezier.hs  COS.hs  Curve.hs  Helper.hs  Knot.hs  Point.hs  Surface.hs  Type.hs
geometry-kernel/test/: Test.hs
iges-translator/: iges-translator.cabal
iges-translator/src/Geometry/File/IGES/: Builder.hs  BuilderDirectory.hs  BuilderParameter.hs  Helper.hs  ParameterParser.hs  Parser.hs  RunIgesReader.hs  Type.hs  TypeEntity.hs
render/: render.cabal
render/app/: Main.hs
render/shaders/: curve.frag  curve.geom  curve.vert  curve_dashed.frag  curve_dashed.geom  cv.frag  cv.geom
render/src/: Drawing.hs  Interface.hs  LogHelper.hs  OpenFile.hs  Scene.hs  Type.hs
render/src/File/Translate/: Class.hs
render/src/File/Translate/Iges/: Scene.hs  Surface128.hs  TrimmedSurface144.hs
render/src/Import/: File.hs
render/src/Render/: BoundingBox.hs  CV.hs  Color.hs  Common.hs  Curve.hs  Scene.hs  Surface.hs  WorldRefs.hs
render/src/Scene/: Class.hs  Common.hs  GLBox.hs  GPU.hs  GeometryAction.hs  Scene.hs  WorldRefs.hs
render/src/Shader/: CV.hs  Common.hs  Curve.hs
