cabal-version:      3.0
name:               bezier-core
version:            0.1.0.0
build-type:         Simple

library
  exposed-modules:  Geometry.Bernstein 
                  , Geometry.Curve 
                  , Geometry.Surface
                  , Geometry.Point
                  , Geometry.Helper
                  , Geometry.COS 
  hs-source-dirs:   src
  build-depends:    base ^>=4.18
                  , linear
  default-language: Haskell2010
