cabal-version:      3.0
name:               bezier-render
version:            0.1.0.0
build-type:         Simple

library
  exposed-modules:  Render
  hs-source-dirs:   src
  build-depends:    base ^>=4.18
                  , sdl2
                  , OpenGL
  default-language: Haskell2010

executable bezier-render-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base ^>=4.18
                  , bezier-render
                  , sdl2
                  , OpenGL
  default-language: Haskell2010
