cabal-version:      3.0
name:               bezier-render
version:            0.1.0.0
build-type:         Simple

library
  exposed-modules:  Interface
                  , Drawing
                  , Scene
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && < 5
                  , GLFW-b >= 3.3.0
                  , OpenGL >= 3.0.3
                  , bezier-core
                  , linear
                  , iges-translator
  default-language: Haskell2010

executable bezier-render-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base >= 4.7 && < 5
                  , GLFW-b >= 3.3.0
                  , OpenGL >= 3.0.3
                  , bezier-render
                  , bezier-core
                  , iges-translator
                  , linear
  default-language: Haskell2010
