cabal-version:      3.0
name:               file-translator
version:            0.1.0.0
build-type:         Simple

library
  exposed-modules:  Geometry.File.IGES.BuilderIgesRaw
                  , Geometry.File.IGES.Type
                  , Geometry.File.IGES.TypeEntity
                  , Geometry.File.IGES.BuilderDirectory
                  , Geometry.File.IGES.BuilderParameter
                  , Geometry.File.IGES.ParameterParser
                  , Geometry.File.IGES.Helper
                  , Geometry.File.IGES.RunIgesReader
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && < 5
                  , linear
                  , parsec
                  , text
                  , containers
                  , lens
                  , data-default
  default-language: Haskell2010
