cabal-version:      3.0
name:               render
version:            0.1.0.0
build-type:         Simple

library
  exposed-modules:  Interface
                  , Type
                  , LogHelper
                  , File.Translate.Class
                  , File.Translate.Iges.Scene
                  , File.Translate.Iges.Surface128
                  , File.Translate.Iges.TrimmedSurface144
                  , Scene.Scene
                  , Scene.Common
                  , Scene.GeometryAction
                  , Scene.GPU
                  , Scene.Class
                  , Scene.WorldRefs
                  , Scene.GLBox
                  , Shader.Common
                  , Shader.Curve
                  , Shader.CV
                  , Render.Common
                  , Render.CV
                  , Render.Curve
                  , Render.Surface
                  , Render.WorldRefs
                  , Render.Scene
                  , Render.Color
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && < 5
                  , GLFW-b >= 3.3.0
                  , OpenGL >= 3.0.3 
                  , OpenGLRaw
                  , geometry-kernel
                  , linear
                  , file-translator
                  , lens
                  , mtl
                  , text
                  , rio
                  , containers
                  , bytestring
  default-language: Haskell2010

executable bezier-render-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base >= 4.7 && < 5
                  , GLFW-b >= 3.3.0
                  , OpenGL >= 3.0.3
                  , OpenGLRaw
                  , render
                  , geometry-kernel
                  , file-translator
                  , linear
                  , lens
                  , mtl
                  , text
                  , rio
                  , containers
                  , bytestring
  default-language: Haskell2010
